--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
           </div>
           <div class="row justify-content-center mt-4">
               <div class="col-md-3 card">
-                  <img src="assets/images/1.png">
+                  <img src="files/images/makita.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="assets/images/2.png">
+                  <img src="files/images/bosch .png">
               </div>
               <div class="col-md-3 card">
-                  <img src="assets/images/3.png">
+                  <img src="files/images/stanley.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="assets/images/4.png">
+                  <img src="files/images/hilti.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="assets/images/2.png">
+                  <img src="files/images/dewalt.png">
               </div>
               <div class="col-md-3 card">
                   <img src="assets/images/3.png">
