--- a/pages/contatti.html
+++ b/pages/contatti.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html  >
+<html>
+
 <head>
   <!-- Site made with Mobirise Website Builder v5.6.0, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -21,189 +22,181 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kanit:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap">
+  </noscript>
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
 
 
 
 </head>
+
 <body>
 
   <section data-bs-version="5.1" class="menu menu1 cid-txGyP2nDKD" once="menu" id="menu1-e">
 
 
     <nav class="navbar navbar-dropdown navbar-expand-lg">
-        <div class="container-fluid">
-            <div class="navbar-brand">
-                <span class="navbar-logo">
-                    <a href="https://mobiri.se">
-                        <img src="assets/images/logo.webp" alt="Mobirise" style="height: 4.8rem;">
-                    </a>
-                </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobiri.se">EDIL CELESTE</a></span>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">CHI SIAMO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">SERVIZI</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">CONTATTI</a>
-                    </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">IT</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-white dropdown-item display-4" href="https://mobiri.se">EN</a></div></li></ul>
-
-
-            </div>
+      <div class="container-fluid">
+        <div class="navbar-brand">
+          <span class="navbar-logo">
+            <a href="https://mobiri.se">
+              <img src="assets/images/logo.webp" alt="Mobirise" style="height: 4.8rem;">
+            </a>
+          </span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobiri.se">EDIL CELESTE</a></span>
         </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">CHI SIAMO</a></li>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">SERVIZI</a></li>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">CONTATTI</a>
+            </li>
+            <li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">IT</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-white dropdown-item display-4" href="https://mobiri.se">EN</a></div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-</section>
+  </section>
 
-<section data-bs-version="5.1" class="header17 cid-tyqBb6dXK7 mbr-parallax-background" id="header17-j">
-
-
-
+  <section data-bs-version="5.1" class="header17 cid-tyqBb6dXK7 mbr-parallax-background" id="header17-j">
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(26, 32, 51);">
     </div>
-
     <div class="align-center container">
-        <div class="row justify-content-md-center">
-            <div class="col-md-10">
-                <h1 class="mbr-section-title mb-3 mbr-fonts-style display-1"></h1>
-
-
-
-            </div>
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <h1 class="mbr-section-title mb-3 mbr-fonts-style display-1"></h1>
         </div>
+      </div>
     </div>
-
-</section>
-
-<section data-bs-version="5.1" class="contacts3 map1 cid-tyqAnGv2cJ" id="contacts3-g">
+  </section>
 
 
-
+  <section data-bs-version="5.1" class="contacts3 map1 cid-tyqAnGv2cJ" id="contacts3-g">
     <div class="container">
-        <div class="mbr-section-head">
-            <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                <strong>Contatti</strong></h3>
-
-        </div>
-        <div class="row justify-content-center mt-4">
-            <div class="card col-12 col-md-6">
-                <div class="card-wrapper">
-                    <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
-                    </div>
-                    <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                            <strong>Phone</strong>
-                        </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="tel:+12345678910" class="text-primary">0 (800) 123 45 67</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="card-wrapper">
-                    <div class="image-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
-                    </div>
-                    <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                            <strong>Email</strong>
-                        </h6>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="mailto:info@site.com" class="text-primary">info@site.com</a>
-                        </p>
-                    </div>
-                </div>
+      <div class="mbr-section-head">
+        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
+          <strong>Contatti</strong>
+        </h3>
+      </div>
+      <div class="row justify-content-center mt-4">
+        <div class="card col-12 col-md-6">
+          <div class="card-wrapper">
+            <div class="image-wrapper">
+              <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
             </div>
-            <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"></div>
+            <div class="text-wrapper">
+              <h6 class="card-title mbr-fonts-style mb-1 display-5">
+                <strong>Phone</strong>
+              </h6>
+              <p class="mbr-text mbr-fonts-style display-7">
+                <a href="tel:+12345678910" class="text-primary">0 (800) 123 45 67</a>
+              </p>
             </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="image-wrapper">
+              <span class="mbr-iconfont mobi-mbri-globe mobi-mbri"></span>
+            </div>
+            <div class="text-wrapper">
+              <h6 class="card-title mbr-fonts-style mb-1 display-5">
+                <strong>Email</strong>
+              </h6>
+              <p class="mbr-text mbr-fonts-style display-7">
+                <a href="mailto:info@site.com" class="text-primary">info@site.com</a>
+              </p>
+            </div>
+          </div>
         </div>
+        <div class="map-wrapper col-12 col-md-6">
+          <div class="google-map"></div>
+        </div>
+      </div>
     </div>
-</section>
+  </section>
 
-<section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-f">
-
-
-
-
-
+  <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-f">
     <div class="container-fluid">
-        <div class="media-container-row align-center mbr-white">
-            <div class="row row-links">
-                <ul class="foot-menu">
-
-
-
-
-
-                <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">About us</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Services</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Contact Us</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Work</a>
-                    </li></ul>
-            </div>
-            <div class="row social-row">
-                <div class="social-list align-right pb-2">
-
-
-
-
-
-
-                <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
-                            <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-messenger socicon"></span>
-                        </a>
-                    </div></div>
-            </div>
-            <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2023 Edil Celeste</p>
-            </div>
+      <div class="media-container-row align-center mbr-white">
+        <div class="row row-links">
+          <ul class="foot-menu">
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">About us</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Services</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Contact Us</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Careers</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Work</a>
+            </li>
+          </ul>
         </div>
+        <div class="row social-row">
+          <div class="social-list align-right pb-2">
+            <div class="soc-item">
+              <a href="https://twitter.com/mobirise" target="_blank">
+                <span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+              </a>
+            </div>
+            <div class="soc-item">
+              <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+              </a>
+            </div>
+            <div class="soc-item">
+              <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                <span class="mbr-iconfont mbr-iconfont-social socicon-messenger socicon"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row row-copirayt">
+          <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
+            © Copyright 2023 Edil Celeste</p>
+        </div>
+      </div>
     </div>
-</section>
+  </section>
 
-<section style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
-        href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-      <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> site themes</p>
-    </section>
+  <section
+    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
+      href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+    <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> site themes</p>
+  </section>
 
 
-    <script src="https://www.edilceleste.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="https://www.edilceleste.com/assets/parallax/jarallax.js"></script>
-    <script src="https://www.edilceleste.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-    <script src="https://www.edilceleste.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-    <script src="https://www.edilceleste.com/assets/smoothscroll/smooth-scroll.js"></script>
-    <script src="https://www.edilceleste.com/assets/ytplayer/index.js"></script>
-    <script src="https://www.edilceleste.com/assets/dropdown/js/navbar-dropdown.js"></script>
-    <script src="https://www.edilceleste.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-    <script src="https://www.edilceleste.com/assets/theme/js/script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-      includeHTML();
-    </script>
+  <script src="https://www.edilceleste.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://www.edilceleste.com/assets/parallax/jarallax.js"></script>
+  <script src="https://www.edilceleste.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="https://www.edilceleste.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
+  <script src="https://www.edilceleste.com/assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="https://www.edilceleste.com/assets/ytplayer/index.js"></script>
+  <script src="https://www.edilceleste.com/assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="https://www.edilceleste.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+  <script src="https://www.edilceleste.com/assets/theme/js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script>
+    includeHTML();
+  </script>
 
 </body>
 
