--- a/pages/contatti.html
+++ b/pages/contatti.html
@@ -54,7 +54,7 @@
           <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
             <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">CHI SIAMO</a></li>
             <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">SERVIZI</a></li>
-            <li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">CONTATTI</a>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.edilceleste.com/pages/contatti.html">CONTATTI</a>
             </li>
             <li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">IT</a>
               <div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-white dropdown-item display-4" href="https://mobiri.se">EN</a></div>
@@ -96,7 +96,7 @@
                 <strong>Phone</strong>
               </h6>
               <p class="mbr-text mbr-fonts-style display-7">
-                <a href="tel:+12345678910" class="text-primary">0 (800) 123 45 67</a>
+                <a href="tel:+39" class="text-primary">+39 xxx xx xxx</a>
               </p>
             </div>
           </div>
@@ -109,7 +109,7 @@
                 <strong>Email</strong>
               </h6>
               <p class="mbr-text mbr-fonts-style display-7">
-                <a href="mailto:info@site.com" class="text-primary">info@site.com</a>
+                <a href="mailto:xxx@xxx.com" class="text-primary">xxx@xxx.com</a>
               </p>
             </div>
           </div>
